# midi-controller

./: Cargo.toml  LICENSE  memory.x
src/: dcmotor.rs  lib.rs  main.rs  slider.rs
