[package]
name = "midi-controller"
version = "0.1.0"
edition = "2024"

[dependencies]

embassy-executor = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy.git", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-time = { version = "0.4.0",git = "https://github.com/embassy-rs/embassy.git" , features = ["defmt", "defmt-timestamp-uptime"] }
libm = "0.2.11"

# Libraries for hardware devices
ads1x1x = {version = "0.3.0"}
embedded-hal-async = "1.0.0"
nb = "1.1.0"

# cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"

# Libraries required for debugging and formatting
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }


[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[[bin]]
name = "midi-controller"
test = false

